# auto-config

./: LICENSE  MANIFEST.in  README.md  config.yaml  pyproject.toml  setup.cfg
auto_config/: auto_config.py
src/: auto_config.py  config.py
