[metadata]
name = auto_config
version = 0.0.1
author = Haimao Zhan
author_email = hmzhan@gmail.com
description = config management
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hmzhan/auto-config
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
  piny>=1.0.0
  PyYAML
  pathlib
